<?xml version="1.0"?>
<package format="2">
    <name>nanospline</name>
    <version>0.0.0</version>
    <description>Nanospline package</description>
    <maintainer email="albertgassol1@gmail.ch">Albert Gassol</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <depend>roscpp</depend>
</package>